--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,5 @@
 [database]
-database = todo
-user = root
-password = root
+hostname = ID238512_toxydus.db.webhosting.be
+database = ID238512_toxydus
+user = ID238512_toxydus
+password = Toxydus2018
